--- a/index.html
+++ b/index.html
@@ -1,31 +1,146 @@
 <!DOCTYPE html>
 <html lang="es" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Terminal de Combustible Campana</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/css/main.css">
-  </head>
-  <body>
 
-    <header>
-        <nav></nav>
-    </header>
+<head>
+  <meta charset="utf-8">
+  <title>Terminal de Combustible Campana</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <link rel="shortcut icon" href="images/favicon.png">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="styles/css/main.css">
+</head>
 
-    <main>
+<body>
 
-    </main>
+  <header id="header">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="logo" href="index.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
+        <div class="collapse navbar-collapse" id="nav">
+          <ul class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
+            <li class="d-inline d-lg-none px-3 py-2 menu-close">
+              <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-truncate" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-truncate" href="nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-truncate" href="instalaciones.html">Instalaciones</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-truncate" href="servicios.html">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-truncate" href="#footer">Contacto</a>
+            </li>
+            <li class="nav-item language d-flex align-items-center">
+              <a class="nav-link text-truncate m-0 d-none" href="#">ES</a>
+              <a class="nav-link text-truncate m-0" href="#"><i class="material-icons">language</i> English</a>
+            </li>
+          </ul>
+        </div>
 
-    <footer>
+        <!--<div class="btn-group language">
+          <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" data-display="static" aria-haspopup="true" aria-expanded="false">
+            ES  <i class="material-icons">language</i>
+          </button>
+          <div class="dropdown-menu dropdown-menu-lg-right">
+            <a href="#" class="dropdown-item" type="button">ES</a>
+            <a href="#" class="dropdown-item" type="button">EN</a>
+          </div>
+        </div>-->
 
-    </footer>
+      </div>
+    </nav>
+  </header>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <main>
+
+    <section class="home">
+      <!-- Corousel -->
+      <div id="carousel-home" class="carousel slide" data-ride="carousel" data-interval="3000">
+        <ol class="carousel-indicators">
+          <li data-target="#carousel-home" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-home" data-slide-to="1"></li>
+          <li data-target="#carousel-home" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/slide-1.jpg" class="d-block w-100" alt="Ubicación Estratégica">
+            <div class="carousel-caption">
+              <h5>Ubicación Estratégica</h5>
+              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/4.jpg" class="d-block w-100" alt="Capacidad técnica y logística">
+            <div class="carousel-caption">
+              <h5>Capacidad técnica y logística </h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/6.jpg" class="d-block w-100" alt="Excelencia profesional">
+            <div class="carousel-caption">
+              <h5>Excelencia profesional</h5>
+              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carousel-home" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carousel-home" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </section>
+
+
+  </main>
+
+  <footer id="footer">
+
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+        <div class="col-lg-4">
+          Ribera del Río Paraná de las Palmas,
+          Km 93.4, Campana
+          Provincia de Buenos Aires
+          Teléfono: + 54 3489 432 440
+        </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <div class="container">
+        <div class="copy">
+          &copy; <span class="year-copy">2020</span> Terminal de Combustible Campana. <span class="rights">Todos los derechos reservados.</span>
+        </div>
+        <a href="#header" class="back-to-top"><i class="material-icons">keyboard_arrow_up</i></a>
+      </div>
+    </div>
+
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <script src="script/main.js"></script>
+</body>
 
-  </body>
 </html>
