--- a/instalaciones.html
+++ b/instalaciones.html
@@ -61,7 +61,7 @@
 
       <div class="banner">
         <div class="container">
-          <h2 data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="1000">Instalaciones</h2>
+          <h2 class="m-0" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="1000">Instalaciones</h2>
         </div>
       </div>
 
