--- a/servicios.html
+++ b/servicios.html
@@ -8,113 +8,163 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
   <link rel="shortcut icon" href="images/favicon.png">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="styles/css/main.css">
+  <script type="application/ld+json">
+    {
+     "@context" : "http://schema.org",
+     "@type" : "Organization",
+     "name" : "Terminal de Combustible Campana",
+     "legalName" : "Elite Strategies Llc",
+     "url" : "https://451.com",
+     "logo": "https://451.com/assets/img/logo-dark.png",
+     "sameAs" : [
+       "https://www.instagram.com/451com",
+       "https://www.linkedin.com/company/451com"
+      ],
+     "foundingDate":"1945-08-28",
+     "address": {
+       "@type": "PostalAddress",
+       "streetAddress": "Avenida del Libertador 498, 4to piso",
+       "addressLocality": "Ciudad Autónoma de Buenos Aires",
+       "addressRegion": "Buenos Aires",
+       "postalCode": "1001",
+       "addressCountry": "Argentina"
+     }
+    }
+    </script>
 </head>
 
 <body>
-  <!--header-->
-  <header id="header">
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-      <div class="container">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="logo" href="index.html">
-          <h2 class="sr-only">Terminal de Combustible Campana</h2>
-        </a>
-        <div class="collapse navbar-collapse" id="nav">
-          <ul class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
-            <li class="d-inline d-lg-none px-3 py-2 menu-close">
-              <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-truncate" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-truncate" href="nosotros.html">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-truncate" href="instalaciones.html">Instalaciones</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-truncate" href="servicios.html">Servicios</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-truncate" href="#footer">Contacto</a>
-            </li>
-            <li class="nav-item language d-flex align-items-center">
-              <a class="nav-link text-truncate m-0 d-none" href="#">ES</a>
-              <a class="nav-link text-truncate m-0" href="#"><i class="material-icons">language</i> English</a>
-            </li>
-          </ul>
-        </div>
 
-
-      </div>
-    </nav>
-  </header>
-
-  <body>
-
-    <section class="services">
-
-
-      <!--banner-->
-      <div class="jumbotron p-5 p-md-5 text-white rounded bg-dark">
-        <div class="banner col-md-6 px-0">
-          <h2 class="display-4">Servicios</h2>
-        </div>
-      </div>
-
-      <!--columnas-->
-      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-          <div class="my-3 p-3">
-            <h3 class="display-5">Servicio Logístico</h3>
-            <p class="lead">La terminal provee un servicio logístico integral eficiente, que incluye la carga y descarga de barcos y camiones con combustibles, tanques de almacenamiento y posterior despacho de embarcaciones y camiones.</p>
-          </div>
-
-          <img class="bg-white shadow-sm mx-auto foto" src="images/servicios-5.png" style=" height: 300px; border-radius: 15px 15px 0 0;">
-
-        </div>
-        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-          <div class="my-3 py-3">
-            <h3 class="display-5">Otros Servicios</h3>
-            <p class="lead">También ofrecemos a nuestros clientes<br> una gran variedad de servicios adicionales de tipo:
-            <ul class="srv">
-              <li>Blending de productos </li>
-              <li>Bunkering</li>
-              <li>Servicios a barcos</li>
+    <header id="header" itemscope itemtype="https://schema.org/WPHeader">
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+        <div class="container">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="logo" href="index.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
+          <div class="collapse navbar-collapse" id="nav">
+            <ul id="navbarNav" class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
+              <li class="d-inline d-lg-none px-3 py-2 menu-close">
+                <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-truncate" href="/index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-truncate" href="/nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-truncate" href="/instalaciones.html">Instalaciones</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-truncate" href="/servicios.html">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-truncate contact-link" href="#footer">Contacto</a>
+              </li>
+              <li class="nav-item language d-flex align-items-center">
+                <a class="nav-link text-truncate m-0" href="/en"><i class="material-icons">language</i>ENG</a>
+              </li>
             </ul>
-            </p>
           </div>
-          <img class="bg-white shadow-sm mx-auto" src="images/servicios-6.png" style="height: 300px; border-radius: 15px 15px 0 0;">
+
         </div>
-      </div>
+      </nav>
+    </header>
 
-    </section>
+    <main>
+      <section class="services">
 
-    <footer id="footer">
+        <div class="banner">
+          <div class="container">
+            <h2 class="m-0" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="1000">Servicios</h2>
+          </div>
+        </div>
+
+        <!--columnas-->
+        <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+          <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+            <div class="my-3 p-3">
+              <h3 class="display-5">Servicio Logístico</h3>
+              <p class="lead">La terminal provee un servicio logístico integral eficiente, que incluye la carga y descarga de barcos y camiones con combustibles, tanques de almacenamiento y posterior despacho de embarcaciones y camiones.</p>
+            </div>
+
+            <img class="bg-white shadow-sm mx-auto foto" src="images/servicios-5.png" style="border-radius: 15px 15px 0 0; margin-top:25px;">
+
+          </div>
+          <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+            <div class="my-3 py-3">
+              <h3 class="display-5">Otros Servicios</h3>
+              <p class="lead">También ofrecemos a nuestros clientes<br> una gran variedad de servicios adicionales de tipo:
+              <ul class="srv">
+                <li>Blending de productos </li>
+                <li>Bunkering</li>
+                <li>Servicios a barcos</li>
+              </ul>
+              </p>
+            </div>
+            <img class="bg-white shadow-sm mx-auto" src="images/servicios-6.png" style="height: 300px; border-radius: 15px 15px 0 0;">
+          </div>
+        </div>
+
+      </section>
+
+    </main>
+
+
+    <footer id="footer" itemscope itemtype="https://schema.org/WPFooter">
 
       <div class="footer-top">
         <div class="container">
           <div class="row">
-            <div class="col-lg-4">
-              Ribera del Río Paraná de las Palmas,
-              Km 93.4, Campana
-              Provincia de Buenos Aires
-              Teléfono: + 54 3489 432 440
+
+            <div class="col-md-6 col-lg-5 mb-4 mb-lg-0">
+              <span class="d-block mb-2 location">OFICINA</span>
+              <address class="mb-1">
+                <i class="material-icons mb-5 mb-lg-2">location_on</i> Avenida del Libertador 498, 4to piso <br>
+                (1001) Ciudad Autónoma de Buenos Aires<br>
+              </address>
+              <i class="material-icons">phone</i> Tel: <a href="tel:+54117078-55600">+54 11 7078-5560</a>
             </div>
+
+            <div class="col-md-6 col-lg-5 mb-3 mb-lg-0">
+              <span class="d-block mb-2 location">TERMINAL</span>
+              <address class="mb-1">
+                <i class="material-icons mb-5">location_on</i> Avda. Larrabure 650 <br>
+                (2804) Campana <br>
+                Provincia de Buenos Aires
+              </address>
+            </div>
+
+            <div class="col-lg-2">
+              <ul class="footer-nav mb-0">
+                <li class="nav-item">
+                  <a class="text-truncate" href="index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="ntext-truncate" href="nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                  <a class="text-truncate" href="instalaciones.html">Instalaciones</a>
+                </li>
+                <li class="nav-item">
+                  <a class="text-truncate" href="servicios.html">Servicios</a>
+                </li>
+              </ul>
+            </div>
+
           </div>
         </div>
       </div>
 
       <div class="footer-bottom">
         <div class="container">
-          <div class="copy">
+          <div class="copy text-center py-3">
             &copy; <span class="year-copy">2020</span> Terminal de Combustible Campana. <span class="rights">Todos los derechos reservados.</span>
           </div>
           <a href="#header" class="back-to-top"><i class="material-icons">keyboard_arrow_up</i></a>
@@ -127,6 +177,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="script/main.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 
   </body>
