--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
               <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="/index.html">Inicio</a>
+              <a class="nav-link text-truncate" href="index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="/nosotros.html">Nosotros</a>
+              <a class="nav-link text-truncate" href="nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="/instalaciones.html">Instalaciones</a>
+              <a class="nav-link text-truncate" href="instalaciones.html">Instalaciones</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="/servicios.html">Servicios</a>
+              <a class="nav-link text-truncate" href="servicios.html">Servicios</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-truncate contact-link" href="#footer">Contacto</a>
@@ -92,21 +92,21 @@
             <img src="images/slide-1.jpg" class="d-block w-100" alt="Ubicación Estratégica">
             <div class="carousel-caption">
               <h5>Ubicación Estratégica</h5>
-              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+              <p>Nuestra terminal se encuentra en el ingreso de la Hidrovía del río Paraná.</p>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item tank-slide">
             <img src="images/slide-2.jpg" class="d-block w-100" alt="Capacidad técnica y logística">
             <div class="carousel-caption">
               <h5>Capacidad técnica y logística </h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <p>Contamos con el espacio y los recursos necesarios para su operación.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/slide-3.jpg" class="d-block w-100" alt="Excelencia profesional">
             <div class="carousel-caption">
               <h5>Excelencia profesional</h5>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+              <p>Aplicamos los más altos estándares internacionales de seguridad y cuidado del ambiente.</p>
             </div>
           </div>
         </div>
@@ -123,7 +123,7 @@
       <div class="home-heading">
         <div class="container">
           <h2 class="text-center" data-aos="fade-up" data-aos-duration="1000">Somos el socio estratégico para las empresas que buscan ampliar su capacidad y potenciar su logística en la región.</h2>
-          <div class="know-more" data-aos="fade-left" data-aos-duration="1500">
+          <div class="know-more" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="400">
             <a href="/nosotros.html">Conocé más</a>
           </div>
         </div>
@@ -132,19 +132,19 @@
       <div class="home-features">
         <div class="container">
           <div class="features-container d-md-flex justify-content-center">
-            <div class="item text-center" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1000">
+            <div class="item text-center" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="400">
               <figure>
                 <img src="images/boat-from-front-view.png" alt="Puerto de 250 M">
               </figure>
-              <h4>Puerto de <br><span>250 m</span></h4>
+              <h4>Puerto de <span>250 m</span> habilitado para exportación e importación.</h4>
             </div>
-            <div class="item text-center" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-offset="200" data-aos-duration="1000">
+            <div class="item text-center" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1000" data-aos-delay="600">
               <figure>
                 <img src="images/truck.png" alt="AREA DE OPERACIONES">
               </figure>
               <h4>Área de operaciones para despachar hasta <span>4.000 m<sup>3</sup></span> diarios</h4>
             </div>
-            <div class="item text-center" data-aos="fade-left" data-aos-offset="300" data-aos-duration="1000">
+            <div class="item text-center" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="800">
               <figure>
                 <img src="images/tank.png" alt="140 MIL M3 DE ALMACENAMIENTO">
               </figure>
