--- a/servicios.html
+++ b/servicios.html
@@ -53,16 +53,16 @@
                 <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-truncate" href="/index.html">Inicio</a>
+                <a class="nav-link text-truncate" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-truncate" href="/nosotros.html">Nosotros</a>
+                <a class="nav-link text-truncate" href="nosotros.html">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-truncate" href="/instalaciones.html">Instalaciones</a>
+                <a class="nav-link text-truncate" href="instalaciones.html">Instalaciones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-truncate" href="/servicios.html">Servicios</a>
+                <a class="nav-link text-truncate" href="servicios.html">Servicios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-truncate contact-link" href="#footer">Contacto</a>
@@ -80,35 +80,40 @@
     <main>
       <section class="services">
 
-        <div class="banner">
+        <div class="banner banner-servicios">
           <div class="container">
-            <h2 class="m-0" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="1000">Servicios</h2>
+            <h2 class="m-0" data-aos="fade-right" data-aos-easing="ease-out-cubic" data-aos-duration="1000">Servicios</h2>
           </div>
         </div>
 
-        <!--columnas-->
-        <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-          <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-            <div class="my-3 p-3">
-              <h3 class="display-5">Servicio Logístico</h3>
-              <p class="lead">La terminal provee un servicio logístico integral eficiente, que incluye la carga y descarga de barcos y camiones con combustibles, tanques de almacenamiento y posterior despacho de embarcaciones y camiones.</p>
+        <div class="container">
+          <div class="row">
+
+            <div class="services-wrapper d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+
+              <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-3 px-lg-4 text-center" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300">
+                <div class="box-text mb-3 p-3">
+                  <h3>Servicio Logístico</h3>
+                  <p class="lead">La terminal provee un servicio logístico integral eficiente, que incluye la carga y descarga de barcos y camiones con combustibles, tanques de almacenamiento y posterior despacho de embarcaciones y camiones.</p>
+                </div>
+                <img class="shadow-sm mx-auto" src="images/servicios-1.png" alt="Hombres trabajando">
+              </div>
+
+              <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-3 px-lg-4 text-center" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="600">
+                <div class="box-text mb-3 py-3">
+                  <h3>Otros Servicios</h3>
+                  <p class="lead">También ofrecemos a nuestros clientes una gran variedad de servicios adicionales de tipo:</p>
+                  <ul class="srv">
+                    <li>Blending de productos </li>
+                    <li>Bunkering</li>
+                    <li>Servicios a barcos</li>
+                  </ul>
+                </div>
+                <img class="shadow-sm mx-auto" src="images/servicios-2.png" alt="Hombres trabajando">
+              </div>
+
             </div>
 
-            <img class="bg-white shadow-sm mx-auto foto" src="images/servicios-5.png" style="border-radius: 15px 15px 0 0; margin-top:25px;">
-
-          </div>
-          <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-            <div class="my-3 py-3">
-              <h3 class="display-5">Otros Servicios</h3>
-              <p class="lead">También ofrecemos a nuestros clientes<br> una gran variedad de servicios adicionales de tipo:
-              <ul class="srv">
-                <li>Blending de productos </li>
-                <li>Bunkering</li>
-                <li>Servicios a barcos</li>
-              </ul>
-              </p>
-            </div>
-            <img class="bg-white shadow-sm mx-auto" src="images/servicios-6.png" style="height: 300px; border-radius: 15px 15px 0 0;">
           </div>
         </div>
 
