--- a/nosotros.html
+++ b/nosotros.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Terminal de Combustible Campana</title>
+  <title>Terminal de Combustible Campana - Nosotros</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="keywords" content="">
@@ -89,10 +89,10 @@
         </div>
       </div>
 
-      <div class="container mb-5">
+      <div class="container pt-md-4 mb-5">
         <div class="row">
 
-          <div class="col-md-6" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="300">
+          <div class="col-md-6 pr-md-4" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="300">
             <p>
               Somos una compañía de capitales argentinos que,<span> desde 2015</span> gestiona comercialmente una Terminal de almacenamiento de combustibles y productos hidrocarburíferos para
               empresas de primera línea, tanto locales como internacionales.
@@ -104,7 +104,7 @@
             </p>
           </div>
 
-          <div class="col-md-6" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="600">
+          <div class="col-md-6 pl-md-4" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="600">
             <p>
               Nuestra ubicación estratégica -en el ingreso al canal Hidrovía del río Paraná- y el enfoque integral de nuestro servicio, nos posiciona como proveedor de referencia en Campana
               (provincia de Buenos Aires), localidad en la cual se centra
@@ -118,7 +118,7 @@
         </div>
       </div>
 
-      <div class="container mb-5 text-center">
+      <div class="container pt-4 mb-5 text-center">
         <iframe width="700" height="380" src="https://www.youtube.com/embed/3ddcJBvtRqY" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
 
