--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
       <div class="home-heading">
         <div class="container">
           <h2 class="text-center" data-aos="fade-up" data-aos-duration="1000">Somos el socio estratégico para las empresas que buscan ampliar su capacidad y potenciar su logística en la región.</h2>
-          <div class="know-more" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="400">
-            <a href="/nosotros.html">Conocé más</a>
+          <div class="know-more" data-aos="zoom-in" data-aos-duration="1200" data-aos-delay="600">
+            <a href="nosotros.html">Conocé más</a>
           </div>
         </div>
       </div>
@@ -132,19 +132,19 @@
       <div class="home-features">
         <div class="container">
           <div class="features-container d-md-flex justify-content-center">
-            <div class="item text-center" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="400">
+            <div class="item text-center" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">
               <figure>
                 <img src="images/boat-from-front-view.png" alt="Puerto de 250 M">
               </figure>
               <h4>Puerto de <span>250 m</span> habilitado para exportación e importación.</h4>
             </div>
-            <div class="item text-center" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1000" data-aos-delay="600">
+            <div class="item text-center" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400">
               <figure>
                 <img src="images/truck.png" alt="AREA DE OPERACIONES">
               </figure>
               <h4>Área de operaciones para despachar hasta <span>4.000 m<sup>3</sup></span> diarios</h4>
             </div>
-            <div class="item text-center" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="800">
+            <div class="item text-center" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600">
               <figure>
                 <img src="images/tank.png" alt="140 MIL M3 DE ALMACENAMIENTO">
               </figure>
