--- a/instalaciones.html
+++ b/instalaciones.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Terminal de Combustible Campana</title>
+  <title>Terminal de Combustible Campana - Instalaciones</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="keywords" content="">
@@ -82,7 +82,7 @@
             </div>
           </div>
 
-          <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3 row-2">
+          <div class="d-md-flex flex-md-equal w-100 pl-md-3 row-2">
             <div class="box-instalaciones box-almacenamiento bg-gray mr-md-3 p-3 p-lg-4 text-center text-white overflow-hidden" data-aos="fade-up" data-aos-duration="1000">
               <div class="my-3 p-3">
                 <h2 class="display-5">Capacidad de almacenamiento</h2>
