--- a/servicios.html
+++ b/servicios.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Terminal de Combustible Campana</title>
+  <title>Terminal de Combustible Campana - Servicios</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="keywords" content="">
@@ -92,7 +92,7 @@
             <div class="services-wrapper d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
 
               <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-3 px-lg-4 text-center" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300">
-                <div class="box-text mb-3 p-3">
+                <div class="box-text mb-3 py-2 p-lg-3">
                   <h3>Servicio Logístico</h3>
                   <p class="lead">La terminal provee un servicio logístico integral eficiente, que incluye la carga y descarga de barcos y camiones con combustibles, tanques de almacenamiento y posterior despacho de embarcaciones y camiones.</p>
                 </div>
@@ -100,7 +100,7 @@
               </div>
 
               <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-3 px-lg-4 text-center" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="600">
-                <div class="box-text mb-3 py-3">
+                <div class="box-text mb-3 py-2 p-lg-3">
                   <h3>Otros Servicios</h3>
                   <p class="lead">También ofrecemos a nuestros clientes una gran variedad de servicios adicionales de tipo:</p>
                   <ul class="srv">
