--- a/en/index_en.html
+++ b/en/index_en.html
@@ -46,29 +46,29 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="logo" href="index.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
+        <a class="logo" href="index_en.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
         <div class="collapse navbar-collapse" id="nav">
           <ul id="navbarNav" class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
             <li class="d-inline d-lg-none px-3 py-2 menu-close">
               <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="index.html">Inicio</a>
+              <a class="nav-link text-truncate" href="index_en.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="nosotros.html">Nosotros</a>
+              <a class="nav-link text-truncate" href="nosotros_en.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="instalaciones.html">Instalaciones</a>
+              <a class="nav-link text-truncate" href="instalaciones_en.html">Facilities</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="servicios.html">Servicios</a>
+              <a class="nav-link text-truncate" href="servicios_en.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate contact-link" href="#footer">Contacto</a>
+              <a class="nav-link text-truncate contact-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item language d-flex align-items-center">
-              <a class="nav-link text-truncate m-0" href="/en"><i class="material-icons">language</i>ENG</a>
+              <a class="nav-link text-truncate m-0" href="/en"><i class="material-icons">language</i>ESP</a>
             </li>
           </ul>
         </div>
@@ -91,22 +91,22 @@
           <div class="carousel-item active">
             <img src="images/slide-1.jpg" class="d-block w-100" alt="Ubicación Estratégica">
             <div class="carousel-caption">
-              <h5>Ubicación Estratégica</h5>
-              <p>Nuestra terminal se encuentra en el ingreso de la Hidrovía del río Paraná.</p>
+              <h5>Strategic location</h5>
+              <p>Our terminal is located at the entrance to the Paraná River Waterway.</p>
             </div>
           </div>
           <div class="carousel-item tank-slide">
             <img src="images/slide-2.jpg" class="d-block w-100" alt="Capacidad técnica y logística">
             <div class="carousel-caption">
-              <h5>Capacidad técnica y logística </h5>
-              <p>Contamos con el espacio y los recursos necesarios para su operación.</p>
+              <h5>Logistical and Technical capacity</h5>
+              <p>We have the place and resources necessary for your operations.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/slide-3.jpg" class="d-block w-100" alt="Excelencia profesional">
             <div class="carousel-caption">
-              <h5>Excelencia profesional</h5>
-              <p>Aplicamos los más altos estándares internacionales de seguridad y cuidado del ambiente.</p>
+              <h5>Professional excellence</h5>
+              <p>We apply the highest international standards of safety and care of the environment.</p>
             </div>
           </div>
         </div>
@@ -122,9 +122,9 @@
 
       <div class="home-heading">
         <div class="container">
-          <h2 class="text-center" data-aos="fade-up" data-aos-duration="1000">Somos el socio estratégico para las empresas que buscan ampliar su capacidad y potenciar su logística en la región.</h2>
+          <h2 class="text-center" data-aos="fade-up" data-aos-duration="1000">We are the strategic partner for companies which are seeking to expand their capacity and enhance their logistic operations in the region.</h2>
           <div class="know-more" data-aos="zoom-in" data-aos-duration="1200" data-aos-delay="600">
-            <a href="nosotros.html">Conocé más</a>
+            <a href="nosotros_en.html">View More</a>
           </div>
         </div>
       </div>
@@ -137,14 +137,14 @@
               <figure>
                 <img src="images/boat-from-front-view.png" alt="Puerto de 250 M">
               </figure>
-              <h4>Puerto de <span>250 m</span> habilitado para exportación e importación.</h4>
+              <h4><span>250 mt</span> port enabled for exportation and importation services.</h4>
             </div>
 
             <div class="item text-center" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600">
               <figure>
                 <img src="images/tank.png" alt="140 MIL M3 DE ALMACENAMIENTO">
               </figure>
-              <h4><span>140 mil m<sup>3</sup></span> de almacenamiento</h4>
+              <h4><span>140 thousand mt<sup>3</sup></span> of storage</h4>
             </div>
 
 
@@ -152,7 +152,7 @@
               <figure>
                 <img src="images/truck.png" alt="AREA DE OPERACIONES">
               </figure>
-              <h4>Área de operaciones para despachar hasta <span>4.000 m<sup>3</sup></span> diarios</h4>
+              <h4>Operations area to dispatch up to<span>4.000 mt<sup>3</sup></span>per day</h4>
             </div>
 
 
@@ -172,10 +172,10 @@
         <div class="row">
 
           <div class="col-md-6 col-lg-5 mb-4 mb-lg-0">
-            <span class="d-block mb-2 location">OFICINA</span>
+            <span class="d-block mb-2 location">OFFICES</span>
             <address class="mb-1">
-              <i class="material-icons mb-5 mb-lg-2">location_on</i> Avenida del Libertador 498, 4to piso <br>
-              (1001) Ciudad Autónoma de Buenos Aires<br>
+              <i class="material-icons mb-5 mb-lg-2">location_on</i> Avenida del Libertador 498, 4th Floor<br>
+              (1001) Buenos Aires - Argentina<br>
             </address>
             <i class="material-icons">phone</i> Tel: <a href="tel:+54117078-55600">+54 11 7078-5560</a>
           </div>
@@ -183,7 +183,7 @@
           <div class="col-md-6 col-lg-5 mb-3 mb-lg-0">
             <span class="d-block mb-2 location">TERMINAL</span>
             <address class="mb-1">
-              <i class="material-icons mb-5">location_on</i> Avda. Larrabure 650 <br>
+              <i class="material-icons mb-5">location_on</i> Avenida Larrabure 650 <br>
               (2804) Campana <br>
               Provincia de Buenos Aires
             </address>
@@ -192,16 +192,16 @@
           <div class="col-lg-2">
             <ul class="footer-nav mb-0">
               <li class="nav-item">
-                <a class="text-truncate" href="index.html">Inicio</a>
+                <a class="text-truncate" href="index_en.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="ntext-truncate" href="nosotros.html">Nosotros</a>
+                <a class="ntext-truncate" href="nosotros_en.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="text-truncate" href="instalaciones.html">Instalaciones</a>
+                <a class="text-truncate" href="instalaciones_en.html">Facilities</a>
               </li>
               <li class="nav-item">
-                <a class="text-truncate" href="servicios.html">Servicios</a>
+                <a class="text-truncate" href="servicios_en.html">Services</a>
               </li>
             </ul>
           </div>
@@ -213,7 +213,7 @@
     <div class="footer-bottom">
       <div class="container">
         <div class="copy text-center py-3">
-          &copy; <span class="year-copy">2020</span> Terminal de Combustible Campana. <span class="rights">Todos los derechos reservados.</span>
+          &copy; <span class="year-copy">2020</span> Terminal de Combustible Campana. <span class="rights">All rights reserved.</span>
         </div>
         <a href="#header" class="back-to-top"><i class="material-icons">keyboard_arrow_up</i></a>
       </div>
