--- a/en/servicios_en.html
+++ b/en/servicios_en.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Terminal de Combustible Campana - Servicios</title>
+  <title>Terminal de Combustible Campana - Services</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="keywords" content="">
@@ -46,29 +46,29 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="logo" href="index.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
+          <a class="logo" href="index_en.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
           <div class="collapse navbar-collapse" id="nav">
             <ul id="navbarNav" class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
               <li class="d-inline d-lg-none px-3 py-2 menu-close">
                 <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-truncate" href="index.html">Inicio</a>
+                <a class="nav-link text-truncate" href="index_en.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-truncate" href="nosotros.html">Nosotros</a>
+                <a class="nav-link text-truncate" href="nosotros_en.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-truncate" href="instalaciones.html">Instalaciones</a>
+                <a class="nav-link text-truncate" href="instalaciones_en.html">Facilities</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-truncate" href="servicios.html">Servicios</a>
+                <a class="nav-link text-truncate" href="servicios_en.html">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-truncate contact-link" href="#footer">Contacto</a>
+                <a class="nav-link text-truncate contact-link" href="#footer">Contact</a>
               </li>
               <li class="nav-item language d-flex align-items-center">
-                <a class="nav-link text-truncate m-0" href="/en"><i class="material-icons">language</i>ENG</a>
+                <a class="nav-link text-truncate m-0" href="/en"><i class="material-icons">language</i>ESP</a>
               </li>
             </ul>
           </div>
@@ -82,7 +82,7 @@
 
         <div class="banner banner-servicios">
           <div class="container">
-            <h2 class="m-0" data-aos="fade-right" data-aos-easing="ease-out-cubic" data-aos-duration="1000">Servicios</h2>
+            <h2 class="m-0" data-aos="fade-right" data-aos-easing="ease-out-cubic" data-aos-duration="1000">Services</h2>
           </div>
         </div>
 
@@ -101,7 +101,7 @@
 
               <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-3 px-lg-4 text-center" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="600">
                 <div class="box-text mb-3 py-2 p-lg-3">
-                  <h3>Otros Servicios</h3>
+                  <h3>More Services</h3>
                   <p class="lead">También ofrecemos a nuestros clientes una gran variedad de servicios adicionales de tipo:</p>
                   <ul class="srv">
                     <li>Blending de productos </li>
@@ -129,10 +129,10 @@
           <div class="row">
 
             <div class="col-md-6 col-lg-5 mb-4 mb-lg-0">
-              <span class="d-block mb-2 location">OFICINA</span>
+              <span class="d-block mb-2 location">OFFICES</span>
               <address class="mb-1">
-                <i class="material-icons mb-5 mb-lg-2">location_on</i> Avenida del Libertador 498, 4to piso <br>
-                (1001) Ciudad Autónoma de Buenos Aires<br>
+                <i class="material-icons mb-5 mb-lg-2">location_on</i> Avda. del Libertador 498, 4th Floor<br>
+                (1001) Buenos Aires - Argentina<br>
               </address>
               <i class="material-icons">phone</i> Tel: <a href="tel:+54117078-55600">+54 11 7078-5560</a>
             </div>
@@ -149,16 +149,16 @@
             <div class="col-lg-2">
               <ul class="footer-nav mb-0">
                 <li class="nav-item">
-                  <a class="text-truncate" href="index.html">Inicio</a>
+                  <a class="text-truncate" href="index_en.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="ntext-truncate" href="nosotros.html">Nosotros</a>
+                  <a class="ntext-truncate" href="nosotros_en.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="text-truncate" href="instalaciones.html">Instalaciones</a>
+                  <a class="text-truncate" href="instalaciones_en.html">Facilities</a>
                 </li>
                 <li class="nav-item">
-                  <a class="text-truncate" href="servicios.html">Servicios</a>
+                  <a class="text-truncate" href="servicios_en.html">Services</a>
                 </li>
               </ul>
             </div>
@@ -170,7 +170,7 @@
       <div class="footer-bottom">
         <div class="container">
           <div class="copy text-center py-3">
-            &copy; <span class="year-copy">2020</span> Terminal de Combustible Campana. <span class="rights">Todos los derechos reservados.</span>
+            &copy; <span class="year-copy">2020</span> Terminal de Combustible Campana. <span class="rights">All rights reserved.</span>
           </div>
           <a href="#header" class="back-to-top"><i class="material-icons">keyboard_arrow_up</i></a>
         </div>
